--- a/BeendalaWeb/index.html
+++ b/BeendalaWeb/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Beendala</title>
+    <title>Beendala</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BeendalaWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BeendalaWeb.data.br",
-        frameworkUrl: buildUrl + "/BeendalaWeb.framework.js.br",
-        codeUrl: buildUrl + "/BeendalaWeb.wasm.br",
+        dataUrl: buildUrl + "/BeendalaWeb.data",
+        frameworkUrl: buildUrl + "/BeendalaWeb.framework.js",
+        codeUrl: buildUrl + "/BeendalaWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Niki's Games",
         productName: "Beendala",
